--- a/samdesk/default_settings.cfg
+++ b/samdesk/default_settings.cfg
@@ -1,3 +1,3 @@
 # This has to use the syntax of a python file
-FLASK_APP = 'samdesk'
+FLASK_APP = 'almanak-desktop'
 DEFAULT_SETTINGS_VAR = 'fetched var from default_settings.cfg'
